# crewai_projects

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
db/: chroma.sqlite3
src/game_builder_crew/: crew.py  game.py  main.py
src/game_builder_crew/config/: gamedesign.yaml  tasks.yaml
src/job_posting/: crew.py  main.py
src/job_posting/config/: agents.yaml
src/match_profile_to_position/: crew.py  main.py
src/match_profile_to_position/config/: agents.yaml  tasks.yaml
src/match_profile_to_position/data/: jobs.csv
src/surprise_trip/: crew.py  main.py
